# mini_me

./: .env.example  .gitignore  CLAUDE.md  DEPLOY_GUIDE.md  PLAN_UI_FIXES.md  README.md  SECURITY_AUDIT_CHECKLIST.md  SECURITY_CHECKLIST.md  SETUP_GUIDE.md  api.py  approve_draft.py  backfill_ga4.py  config.yaml  dump.rdb  eslint.config.js  ga4_test.py  history.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  run_agent.py  setup_database.py  test.py  test_agent_integration.py  test_ga4_extraction_real.py  test_integration.py  test_promo_fix.py  test_workflow_structure.py  vercel.json  vite.config.js
.claude/: claude.md
agent/: TOOLS_FLOW_GUIDE.md  agent.py  examples.py  load_memory.py  prompt.py  session.py  tools.py
api/: _utils.py  approve.py  backfill.py  draft.py  generate.py  health.py  reject.py  requirements.txt  stats.py
api/auth/: login.py  logout.py
api/metrics/: range.py
api/sessions/: range.py
backend/: api.py  db_pool.py  main.py
backend/agent/: agent.py  examples.py  prompt.py  session.py  tools.py
backend/ga4_extraction/: __init__.py  app_config.py  config.py  database.py  factory.py  (+6 more)
data/: ga4_data.db
email/: .gitkeep  README.md  draft_email.md
ga4_extraction/: __init__.py  config.py  database.py  extraction.py  filters.py  main.py
scripts/: backfill_missing_dates.py  cleanup.sh  extract_channels_delayed.py  migrate_to_postgres.py  refresh_data.py  setup_database.py  start-local-server.sh  stop-local-server.sh  vercel-build.cjs  vercel-build.mjs  vercel-prebuild.cjs  vercel-prebuild.mjs
src/: App.jsx  index.css  main.jsx
tests/: test_agent.py  test_backfill_channels.py  test_channels.py  test_date_validation.py  test_weekend.py  test_workflow.py
workflows/: __init__.py  config.py  interfaces.py  logging.py  result_types.py  service.py
(+63 files in other folders)
