[project]
name = "daily-report"
version = "0.1.0"
description = "Agente redatto alla scrittura di mail utilizzando lo storico dati di GA4"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # AI Agent
    "datapizza-ai>=0.0.7,<0.1",
    "datapizza-ai-clients-anthropic>=0.0.4,<0.1",
    "datapizza-ai-clients-openai>=0.0.7,<0.1",
    
    # Google Analytics
    "google-analytics-data>=0.19.0,<1.0",
    "google-auth-httplib2>=0.2.0,<1.0",
    "google-auth-oauthlib>=1.2.2,<2.0",
    
    # Data Processing
    "pandas>=2.3.3,<3.0",
    
    # Utilities
    "python-dotenv>=1.0.1,<2.0",
    "pyyaml>=6.0.1,<7.0",
    "python-dateutil>=2.8.2,<3.0",
    
    # Web Framework
    "flask>=3.1.2,<4.0",
    "flask-cors>=6.0.1,<7.0",
    
    # Database & Cache
    "redis>=5.0.0,<6.0",
    "psycopg2-binary>=2.9.11,<3.0",
    
    # Authentication
    "PyJWT>=2.8.0,<3.0",
    
    # Production Server
    "gunicorn>=21.0.0,<22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-cov>=4.1.0,<5.0",
    "black>=23.0.0,<24.0",
    "ruff>=0.1.0,<1.0",
]
